<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- Launch Fragment -->
    <string name="app_cover_image_view_description">The Logo Of App</string>
    <string name="upcoming_election_btn_label">Upcoming Elections</string>
    <string name="find_my_representatives_btn_label">Find My Representatives</string>

    <!-- Election Fragment -->
    <string name="upcoming_elections_tv_label">Upcoming Elections</string>
    <string name="saved_elections_tv_label">Saved Election</string>

    <!-- Representative Fragment -->
    <string name="representative_search_tv_label">Representative Search</string>
    <string name="my_representative_tv_label">My Representatives</string>
    <string name="find_my_representative_btn_label">Find My Representatives</string>
    <string name="use_my_location_btn_label">Use My Location</string>
    <string name="address_line_one_hint">Address Line 1</string>
    <string name="address_line_two_hint">Address Line 2</string>
    <string name="city_hint">City</string>
    <string name="zip_hint">Zip</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="location_required_error">Get Error in Requiring Location</string>

    <!-- Vote Information Fragment -->
    <string name="default_election_tv_label">Default Election</string>
    <string name="election_information_tv_label">Election Information</string>
    <string name="voting_Location_tv_label">Voting Location</string>
    <string name="ballot_information_tv_label">Ballot Information</string>
    <string name="follow_election_btn_label">Follow Election</string>
    <string name="unfollow_election_btn_label">Unfollow Election</string>

    <!-- Exception Message -->
    <string name="unknown_view_model_exception">Unknown View Model class when create main VM.</string>

    <!-- Navigation Graph -->
    <!-- Fragment Label -->
    <string name="label_navigation_graph">nav_graph</string>
    <string name="label_fragment_launch">fragment_launch</string>
    <string name="label_fragment_representative">fragment_representative</string>
    <string name="label_fragment_voter_info">fragment_voter_info</string>
    <string name="label_fragment_elections">fragment_elections</string>

</resources>
