<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node -->
    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/representativeMotionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/representative_motion_layout_sense">

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_search_tv_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/addressLineOneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/address_line_one_hint"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/addressLineTwoEt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints=""
            android:hint="@string/address_line_two_hint"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressLineOneEt" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/cityEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/city_hint"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toStartOf="@id/stateSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressLineTwoEt" />

        <!-- TODO: Add default values from provided resources  -->
        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <Spinner
            android:id="@+id/stateSpinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/cityEt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cityEt"
            app:layout_constraintTop_toTopOf="@id/cityEt" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/zipEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/zip_hint"
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintEnd_toEndOf="@id/cityEt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityEt" />

        <!-- TODO: Add visual styling and label -->
        <Button
            android:id="@+id/findMyRepresentativeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representative_btn_label"
            app:layout_constraintTop_toBottomOf="@id/zipEt" />

        <!-- TODO: Add visual styling and content -->
        <Button
            android:id="@+id/useMyLocationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_my_location_btn_label"
            app:layout_constraintTop_toBottomOf="@id/findMyRepresentativeBtn" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/representative_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_representative_tv_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/useMyLocationBtn" />

        <!-- TODO: Add Representatives RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representativeListRv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/padding_small"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/representative_title" />


        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            motion:visibilityMode="ignore" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>