<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Add data binding node for Voter Info ViewModel -->
    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- Add title to toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            style="@style/toolBarTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.election.name}" />

        <TextView
            android:id="@+id/election_date"
            style="@style/voterInfoTimeString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:text="@{viewModel.election.electionDay.toString()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/state_header"
            style="@style/voterInfoTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/election_information_tv_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <!-- Add click binding to open web URL -->
        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/votingLocationTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/voting_Location_tv_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <!-- Add click binding to open web URL -->
        <!-- Add visual styling and content -->
        <TextView
            android:id="@+id/ballotInformationTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:text="@string/ballot_information_tv_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/votingLocationTv" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="correspondenceHeaderTv,addressTv" />

        <!-- Add visual styling and content -->
        <TextView
            android:layout_marginTop="@dimen/margin_medium"
            android:id="@+id/correspondenceHeaderTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.voterInfoState.name}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/ballotInformationTv" />

        <!-- Add data binding -->
        <TextView
            android:id="@+id/addressTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.voterInfoState.electionAdministrationBody.correspondenceAddress.toFormattedString()}"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/correspondenceHeaderTv" />

        <!-- Add button to save election to Room -->
        <Button
            android:id="@+id/followToggleBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/mainStyleButton"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/follow_election_btn_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>